examples/datalog/18_advanced_patterns/16_denormalized.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_denorm
Knowledge graph 'test_denorm' created.
Switched to knowledge graph: test_denorm
> .kg use test_denorm
Switched to knowledge graph: test_denorm
> +orders[(1, "widget", "Alice", 100), (2, "gadget", "Bob", 200), (3, "widget", "Alice", 150), (4, "gizmo", "Carol", 75), (5, "widget", "Bob", 100)].
Inserted 5 fact(s) into 'orders'.
> customer_total(Customer, <SUM:Amt>) :- orders(_, _, Customer, Amt).
Script error: Parse error: Unknown aggregate function: 
